diesel_compile_tests/tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Integer,
        name -> VarChar,
    }
}

fn main() {
    use self::users::dsl::*;

    let pred = id.eq("string");
    //~^ ERROR: the trait bound `&str: AsExpression<diesel::sql_types::Integer>` is not satisfied
    let pred = id.eq(name);
    //~^ ERROR: the trait bound `columns::name: AsExpression<diesel::sql_types::Integer>` is not satisfied
}
